Fix color picker overflow. + color picker now re-positions if it would go off the page.

--- a/src/app/ps1Editor/color-picker/color-picker.component.scss
+++ b/src/app/ps1Editor/color-picker/color-picker.component.scss
@@ -3,6 +3,8 @@
 .color-picker-container {
   position: absolute;
   display: flex;
+  flex-direction: row;
+  align-content: baseline;
   flex-wrap: wrap;
   border: 1px solid black;
   background-color: $primary-background;
